@@ -1245,6 +1245,8 @@ typedef struct
 #define VID_TIMER_COUNT             ((UINT32)624)
 #define VID_AUTOBIND_FLAG           ((UINT32)625)
 #define VID_AUTOUNBIND_FLAG         ((UINT32)626)
+#define VID_TIMEOUT                 ((UINT32)627)
+#define VID_PROGRESS                ((UINT32)628)
 
 // Base variabe for single threshold in message
 #define VID_THRESHOLD_BASE          ((UINT32)0x00800000)
